data/derived/comb/progs/unify/prog0335.ml.out
Characters 58-79:
  else mulByDigit ((i-1), (bigAdd l l));;
                  ^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int
